overflow fix

--- a/css/sass/_resume.scss
+++ b/css/sass/_resume.scss
@@ -4,4 +4,5 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: overlay;
 }
